--- a/Consultivazione/Documentazione/documentazione.html
+++ b/Consultivazione/Documentazione/documentazione.html
@@ -104,7 +104,8 @@
             <div class="lato-superiore">
                 <h4>Lato Superiore</h4>
                 <ul>
-                    <li><b>Inserisci Ticket Massivamente:</b> con questo tasto è possibile inserire massivamente dei ticket da un Excel di template</li>
+                    <li><b>Inserisci Ticket 
+                        :</b> con questo tasto è possibile inserire massivamente dei ticket da un Excel di template</li>
                     <li><b>Inserisci Commesse Massivamente:</b> con questo tasto è possibile inserire massivamente delle commesse da un Excel di template</li>
                 </ul>
                 <p>Gli step da eseguire sono uguali per entrambi.</p>
